# pantry

./: .env.example  README.md  pyproject.toml
.github/workflows/: main.yaml  preview.yaml
app/: config.py  crud.py  main.py  models.py  schemas.py
app/routers/: items.py
