[project]
name = "pantry"
version = "0.1.0"
description = "Pantry items microservice (FastAPI + SQLAlchemy + Postgres)"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "psycopg[binary]>=3.2",
  "pydantic>=2",
  "pydantic-settings>=2",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.30",
]

[dependency-groups]
dev = [
  "httpx>=0.27",
  "pyright>=1.1.409",
  "pytest>=8",
  "ruff>=0.6",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 120
target-version = "py312"
